# rapai-ontology

./: .gitignore  AGENTS.md  ALEMBIC_SUMMARY.md  ARCHITECTURE.md  CLAUDE.md  RAPai_데이터설계명세서_v2.0.md  RAPai_데이터설계명세서_v2.1.md  RAPai_통합설계명세서_v2.8.md  RAPai_통합설계명세서_v2.9.md  TIER0_EXECUTION_PLAN.md  [붙임 2] 2026년도 중소기업기술혁신개발(도메인특화AI모델개발) 세부 지원내용.hwpx  [붙임 3] 4대 업무혁신 분야 및 품목개요서.hwpx  docker-compose.dev.yml  pyproject.toml
.bkit/audit/: 2026-04-18.jsonl  2026-04-21.jsonl  2026-04-22.jsonl
.bkit/runtime/: agent-state.json
.bkit/snapshots/: snapshot-1776487948836.json  snapshot-1776490577447.json  snapshot-1776495630106.json  snapshot-1776496718420.json  snapshot-1776497662493.json  snapshot-1776500232733.json  snapshot-1776501383011.json  snapshot-1776502879545.json  snapshot-1776504786726.json  snapshot-1776506126859.json  snapshot-1776511690609.json  snapshot-1776813117570.json  snapshot-1776817053931.json  snapshot-1776819037997.json  snapshot-1776835068035.json
.bkit/state/: memory.json  pdca-status.json  session-history.json
.claude/: settings.local.json
.claude/agent-memory/bkit-enterprise-expert/: MEMORY.md  project_agent_ontology_dependencies.md  project_agentic_system_decision.md
.claude/agent-memory/bkit-product-manager/: MEMORY.md  project_rapai_ontology.md  user_profile.md
.mindvault/: config.json
alembic/: QUICK_START.md  README.md  VALIDATION_CHECKLIST.md  alembic.ini  env.py
alembic/versions/: 001_initial.py
docs/01-plan/features/: ontology-user-centric-gaps.plan.md
docs/02-design/features/: ontology.design.md
mindvault/: INDEX.md
mindvault/decisions/: 001-ontology-strategy.md  002-ai-model-architecture.md  README.md
mindvault/implementation/: README.md
mindvault/llm/: 00-discussion-opener.md  01-model-selection.md  02-finetuning-roadmap.md  03-evaluation-framework.md  04-security-tier-routing.md  README.md
mindvault/ontology/: 00-why-ontology.md  01-concrete-examples.md  02-ontology-structure.md  03-rules-vs-ontology.md  04-core-elements-research.md  05-project-types-and-terms.md  06-ontology-design-charter.md  07-operational-ontology-design.md  08-ontology-stack-catalog.md  09-work-activity-ontology.md  10-project-type-classification-v2.md  11-performance-analysis.md  README.md
mindvault/research/: README.md
mindvault/system/: 01-harness-engineering.md  02-specialized-ai-model.md  README.md
mindvault/tracing/: README.md
ontology/: METRICS.md  README.md  __init__.py  examples_metrics_integration.py  metrics.py  parser.py
ontology/models/: __init__.py  actions.py  core.py  enums.py  extended.py
ontology/ontology/models/: links.py
ontology/rules/: __init__.py  engine.py  registry.py
ontology/schemas/: actions.json  artifact.json  blocker.json  decision.json  definitions_of_done.json  enums.json  event.json  gate.json  ip.json  kpi.json  links.json  milestone.json  person.json  project.json  risk.json  role.json  task.json  workdirective.json  worklog.json
ontology/tests/: conftest.py
ontology/tests/fixtures/: sample_action_assign_person.json  sample_action_base.json  sample_action_create_task.json  sample_action_log_work.json  sample_action_measure_kpi.json  sample_action_produce_artifact.json  sample_action_raise_blocker.json  sample_action_record_decision.json  sample_action_resolve_blocker.json  sample_action_submit_gate.json  sample_action_update_status.json  sample_action_validate_level_up.json  (+24 more)
ontology/validators/: __init__.py  governance.py
특허관련 문서/: AI_RD관리시스템_통합특허컨셉보고서_v2.md  RD_AI_에이전트_길목특허_명세서_v3.md  chatsummary.md  특허명세서_초안_v1.8.docx  특허명세서_초안_v1.9.docx  특허명세서_초안_v2.0.docx  특허명세서_초안_v2.1.docx  특허명세서_초안_v2.2.docx  특허명세서_최종점검_프롬프트.md  특허명세서_특허A_v2.2_최종.docx
(+5 files in other folders)
