[project]
name = "rapai-ontology"
version = "0.1.0"
description = "RAPai L2.5 Ontology — JSON Schema SSOT + Pydantic v2 models (ADR-001)"
readme = "ontology/README.md"
requires-python = ">=3.11"
authors = [{ name = "RAPai Team", email = "hyunjaeho@tenopa.co.kr" }]
license = { text = "Proprietary" }
keywords = ["ontology", "rapai", "research", "pydantic", "json-schema"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

dependencies = [
    # ── Core schema + validation (Phase I)
    "pydantic>=2.8,<3",
    "jsonschema>=4.22",
    "python-dateutil>=2.9",
    # ── Phase II metrics (Week 11)
    "prometheus-client>=0.20,<1",
    # ── Phase III runtime (declared now for CI stability; can be removed if split later)
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "neo4j>=5.22",
    "qdrant-client>=1.10",
    "cloudevents>=1.10",
    "rdflib>=7.0",
    "prov>=2.0",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-docker>=3.1",
    "hypothesis>=6.108",
    "mypy>=1.11",
    "ruff>=0.6",
    "datamodel-code-generator>=0.26",
    "pre-commit>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ontology"]

# ── Ruff -----------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "ontology/migrations/postgres/versions",
    "ontology/models/_generated.py",
]

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle / pyflakes
    "I",              # isort
    "B",              # flake8-bugbear
    "UP",             # pyupgrade
    "SIM",            # simplifications
    "RUF",
    "N",              # pep8-naming
    "D",              # pydocstyle (relaxed below)
]
ignore = [
    "D100", "D104", "D107", "D203", "D213",  # docstring rules tempered for pragmatism
    "E501",  # line-length enforced by formatter
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Mypy -----------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
exclude = ["ontology/migrations/postgres/versions/"]

[[tool.mypy.overrides]]
module = [
    "prov.*",
    "cloudevents.*",
    "qdrant_client.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ── Pytest ---------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["ontology/tests"]
python_files = ["test_*.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=ontology",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
markers = [
    "unit: unit tests",
    "integration: integration tests requiring docker services",
    "e2e: end-to-end tests",
    "slow: slow tests",
]

[tool.coverage.run]
branch = true
source = ["ontology"]
omit = [
    "ontology/migrations/postgres/versions/*",
    "ontology/models/_generated.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
